# anemoi-datasets

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  .release-please-manifest.json  03-constant-fields.rst  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  core  dop_dataset.py  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS  ci-config.yml  ci-hpc-config.yml  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template-core.md
.github/workflows/: changelog-pr-update.yml  changelog-release-update.yml  ci.yml  downstream-ci-hpc.yml  inactivity-bot.yml  label-public-pr.yml  pr-conventional-commit.yml  pr-label-ats.yml  pr-label-conventional-commits.yml  pr-label-file-based.yml  pr-label-public.yml  push-to-private.yml  python-publish.yml  python-pull-request.yml  readthedocs-pr-update.yml  release-please.yml
ANALYSIS-OF-THIS-PR-FOR-e78b52c9-SHOULD-NOT-BE-MERGED/: 00_PLAN.md  01_usage_recipe_author.md  02_implementation_concepts.md  03_per_source_impl.md  04_global_pros_cons.md  05_per_source_pros_cons.md
anemoi/datasets/: __init__.py  __main__.py  grids.py  provenance.py
anemoi/datasets/commands/: __init__.py  compare.py  copy.py  create.py
dev/obs/: config.yaml  demo.py
docs/: Makefile  changes.md  conf.py  examples.rst  firststeps.rst  images.pptx  index.rst  installing.rst  overview.rst  overview_.py  requirements.txt  test.ipynb
docs/_static/: style.css
docs/adr/: adr-1-data-specification.md  adr-1.md  adr-2-trajectories.md  adr-3-two-step-read.md
docs/building/: Makefile  advanced-options.rst  building.yaml  building1.txt  building2.txt  building3.txt  building3.yaml  concat.yaml  filters.rst  handling-missing-dates.rst  handling-missing-values.rst  handling_missing_dates.rst  handling_missing_values.rst  incremental.rst  introduction.rst  missing_dates.yaml  naming-conventions.rst  naming-variables.rst  naming_variables.rst  operations.rst  pipe.yaml  recipe.rst  sources.rst  statistics.rst  syntax.rst  syntax.yaml  using-python.rst
docs/cli/: compare-lam.rst  compare.rst  compareLAM.rst  compare_LAM.rst  compute.rst  copy.rst  create-test-recipe.rst  create.rst  extract.rst  grib-index.rst  inspect.rst  introduction.rst  patch.rst  recipe.rst  rename.rst  scan.rst  schema.rst  validate.rst
docs/datasets/: introduction.rst  opening.rst
docs/dev/: code_structure.rst  contributing.rst  testing.rst
docs/examples/: 00-example1.ipynb
docs/formats/: introduction.rst
docs/howtos/: introduction.rst
docs/layouts/: gridded.rst  introduction.rst  tabular.rst  trajectories.rst
docs/modules/: create.rst  data.rst  dataset.rst  filters.rst  sources.rst
docs/pptx/: images.pptx
docs/schemas/: matrix.excalidraw  overview.excalidraw  recipe.excalidraw
docs/scripts/: Makefile  api_build.sh
docs/usage/: getting_started.rst  methods.rst  opening.rst  other.rst  selecting.rst  subsetting.rst
docs/using/: combining.rst  configuration.rst  configuration.toml  ensembles.rst  grids.rst  introduction.rst  matching.rst  matching0_.py  matching1_.py  matching2_.py  matching3_.py  matching4_.py  methods.rst  miscellaneous.rst  missing.rst  open_complex.py  open_dataset_parameters.rst  open_path.py  open_yaml_.py  opening.rst  options.rst  other.rst  parameters.rst  selecting.rst  statistics.rst  subsetting.rst  synthetic.rst  window.rst  zip.rst
docs/yaml/: Makefile  building1.yaml  building2.txt  building2.yaml  building3.txt  building3.yaml  concat.yaml  hindcasts.yaml  input.yaml  missing_dates_mixture.yaml  missing_dates_range.yaml
obs/: config.yaml  demo.py
tests/: conftest.py  conftests.py  create-perturbations-full.yaml  create-shift.yaml  cutout.ipynb  test_btree.py  test_caching.py  test_chunks.py  test_chunks_cache_1.py  test_chunks_cache_2.py  test_classes.py  test_compute.py  test_create_test_recipe.py  test_csv.py  test_cutout.py  test_data.py  test_data_gridded.py  test_datasets.py  test_dates.py  test_frequency.py  test_grid_pushdown.py  test_grids.py  test_indexing.py  test_multi.py  test_naming.py  test_observations.py  test_origins.py  test_parts.py  test_read_parts.py  test_read_parts_phase2.py  test_read_parts_phase3.py  test_read_parts_phase4.py  test_read_parts_phase5.py  test_read_parts_verify.py  test_recipe_migrate.py  test_records.py  test_request_filter.py  test_sharding.py  test_synthetic.py  test_trajectories.py  (+7 more)
tests/create/: __init__.py  accumulate-era-1-enda.yaml  accumulate-era-1.yaml  accumulate-era-2.yaml  accumulate-era-3.yaml  accumulate-era-4.yaml  accumulate-era.yaml  accumulate-grib-index-meteo-france-2.yaml  accumulate-grib-index-meteo-france.yaml  accumulate-grib-index-with-regrid.yaml  accumulate-mars-ea-enda.yaml  accumulate-mars-ea-oper-2.yaml  accumulate-mars-ea-oper.yaml  accumulate-mars-ecland.yaml  accumulate-mars-l5-oper.yaml  accumulate-mars-od-oper.yaml  accumulate-mars-od-scda.yaml  accumulate-mars-reset.yaml  accumulate-mars-rr-oper.yaml  accumulate-mars-user-steps.yaml  accumulate.yaml  accumulation.yaml  accumulation_1.yaml  average.yaml  bufr2df.py  bufr2df_parallel.py  concat.yaml  data_sources.yaml  dont_test_observations.py  dont_test_observations_mars.py  dont_test_observations_mars_bufr.py  dont_test_observations_mars_bufr_complex.py  dont_test_observations_mars_bufr_parallel.py  interval_test_data.py  join.yaml  mars-user-steps.yaml  missing-mixture.yaml  missing-range.yaml  missing.yaml  nan.yaml  (+26 more)
tests/xarray/: test_flavour.py  test_kerchunk.py  test_netcdf.py  test_opendap.py  test_samples.py  test_variable.py  test_zarr.py
tools/: Makefile  an-oper-2023-2023-2p5-6h-v1.yaml  build-obs.py  check-obs.py  dataset1.yaml  dataset2.yaml  make-sample-dataset.py  plots.ipynb  pre-commit-copyright-notice.txt  upload-sample-dataset.py
tools/examples/: Makefile  an-oper-2023-2023-2p5-6h-v1.yaml  synop.yaml
tools/grids/: Makefile  grids.ipynb  grids3.yaml  grids4.yaml  grids5.yaml  grids6.yaml  grids7.yaml  grids_multilam.ipynb
(+907 files in other folders)
